micronfig_macros/tests/sources/wrong_conversion_trait_tryfrom.rs
micronfig::config! {
	GARASAUTO: String => u64,
}

fn main() {
	println!("{:?}", GARASAUTO())
}
